syntax = "proto3";

package ticketBooking;

option go_package = "github.com/nandha854/train-ticket-service/proto";

// Service definition for ticket booking
service TicketService {
  rpc PurchaseTicket(PurchaseTicketRequest) returns (TicketReceipt) {}
  rpc GetReceipt(GetReceiptRequest) returns (TicketReceipt) {}
  rpc GetUsersBySection(GetUsersBySectionRequest) returns (UsersBySectionResponse) {}
  rpc RemoveUser(RemoveUserRequest) returns (RemoveUserResponse) {}
  rpc ModifyUserSeat(ModifyUserSeatRequest) returns (TicketReceipt) {}
}

message PurchaseTicketRequest {
  string from = 1;
  string to = 2;
  User user = 3;
}

message User {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}

message TicketReceipt {
  string from = 1;
  string to = 2;
  User user = 3;
  double price = 4;
  Seat seat = 5;
}

message Seat {
  string section = 1;
  int32 seat_number = 2;
}

message GetReceiptRequest {
  string email = 1;
}

message GetUsersBySectionRequest {
  string section = 1;
}

message UsersBySectionResponse {
  repeated TicketReceipt tickets = 1;
}

message RemoveUserRequest {
  string email = 1;
}

message RemoveUserResponse {
  string message = 1;
}

message ModifyUserSeatRequest {
  string email = 1;
  string new_section = 2;
}